--- a/index.css
+++ b/index.css
@@ -20,6 +20,7 @@ nav {
     justify-content: center;
     flex: 1;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    cursor: pointer;
 }
 .redes {
     display: flex;
@@ -180,11 +181,14 @@ footer {
 }
 
 .hamburguesa {
+    color: black;
     display: none;
     font-size: 28px;
     background: none;
     border: none;
     cursor: pointer;
+    height: 50px;
+    width: 41px ;
 }
 @media (max-width: 768px) {
     .logo {
