--- a/index.css
+++ b/index.css
@@ -309,101 +309,265 @@ footer {
         margin-left: 0
     }
 }
-@media (max-width: 1290px) {
-    .name, .Alva, .dev {
-        display: none;
-    }
-    .responsive {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    }
-    .d-flex {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-    }
-    .name2 {
+@media (max-width: 1284px) {
+    .name {
         font-size: 130px;
         margin-top: 40px;
         margin: 150px 0 0 10px;
     }
-    .dev2 {
+    .dev {
         font-size: 130px;
         color: gray;
         margin-left: auto;
-        margin: 150px 0px 0 0 ;
+        margin: 150px 10px 0 0 ;
     }
-    .Alva2 {
-        font-size: 140px;
-        margin: -60px 0 16px 10px;
+    .Alva {
+        font-size: 130px;
+        margin: 150px 0 0px 0px;
     }
 }
-
-@media (max-width: 1210px) {
-    .responsive {
-        display: none;
-    }
-    .responsive2{
-        display: flex;
-        flex-direction: column;
-    }
-    .name3 {
+@media (max-width: 1213px) {
+    .name {
         font-size: 120px;
-        margin: 130px 0 0 10px;
+        margin: 150px 0 0 10px;
     }
-    .dev3 {
+    .dev {
         font-size: 120px;
         color: gray;
         margin-left: auto;
-        margin: 130px 0px 0 0 ;
-    }
-    .Alva3 {
+        margin: 150px 10px 0 0;
+    }  
+    .Alva {
         font-size: 120px;
-        margin: -50px 0 16px 10px;
-    }   
-    .contenedorNegro3 {
+        margin: 150px 0 0px 0px;
+    }
+    .contenedorNegro {
         display: flex;
         justify-content: space-between;
         width: 1000px;
     }
-    .career{
-        margin-top: -30px;
+}
+@media (max-width: 1100px) {
+    .name {
+        font-size: 110px;
+        margin: 170px 0 0 10px;
+    }
+    .dev {
+        font-size: 110px;
+        color: gray;
+        margin-left: auto;
+        margin: 170px 10px 0 0;
+    }  
+    .Alva {
+        font-size: 110px;
+        margin: 170px 0 0px 0px;
     }
 }
-@media (max-width: 1000px) {
-    .contenedorNegro3 {
-        display: flex;
-        justify-content: space-between;
-        width: 900px;
+@media (max-width: 1031px) {
+    .name {
+        font-size: 100px;
+        margin: 170px 0 0 10px;
+    }
+    .dev {
+        font-size: 100px;
+        color: gray;
+        margin-left: auto;
+        margin: 170px 10px 0 0;
+    }  
+    .Alva {
+        font-size: 100px;
+        margin: 170px 0 0px 0px;
     }
 }
-@media (max-width: 900px) {
-    .contenedorNegro3 {
-        display: flex;
-        justify-content: space-between;
-        width: 800px;
+@media (max-width: 930px) {
+    .name {
+        font-size: 90px;
+        margin: 170px 0 0 10px;
+    }
+    .dev {
+        font-size: 90px;
+        color: gray;
+        margin-left: auto;
+        margin: 170px 10px 0 0;
+    }  
+    .Alva {
+        font-size: 90px;
+        margin: 170px 0 0px 0px;
+    }
+    .career {
+        font-size: 16px;
     }
 }
-@media (max-width: 800px) {
-    .contenedorNegro3 {
-        display: flex;
-        justify-content: space-between;
-        width: 700px;
+@media (max-width: 850px) {
+    .name {
+        font-size: 80px;
+        margin: 170px 0 0 10px;
+    }
+    .dev {
+        font-size: 80px;
+        color: gray;
+        margin-left: auto;
+        margin: 170px 10px 0 0;
+    }  
+    .Alva {
+        font-size: 80px;
+        margin: 170px 0 0px 0px;
+    }
+    .aboutMe {
+        height: 435px;
     }
 }
-@media (max-width: 700px) {
-    .contenedorNegro3 {
-        display: flex;
-        justify-content: space-between;
-        width: 600px;
+@media (max-width: 760px) {
+    .name {
+        font-size: 70px;
+        margin: 165px 0 0 10px;
+    }
+    .dev {
+        font-size: 70px;
+        color: gray;
+        margin-left: auto;
+        margin: 165px 10px 0 0;
+    }  
+    .Alva {
+        font-size: 70px;
+        margin: 165px 0 0px 0px;
+    }
+    .aboutMe {
+        height: 420px;
     }
 }
-
-@media (max-width: 600px) {
-    .contenedorNegro3 {
-        display: flex;
-        justify-content: space-between;
-        width: 500px;
+@media (max-width: 669px) {
+    .name {
+        font-size: 60px;
+        margin: 165px 0 0 10px;
+    }
+    .dev {
+        font-size: 60px;
+        color: gray;
+        margin-left: auto;
+        margin: 165px 10px 0 0;
+    }  
+    .Alva {
+        font-size: 60px;
+        margin: 165px 0 0px 0px;
+    }
+    .career {
+        font-size: 14px;
+    }
+    .aboutMe {
+        width: 100%;
+        height: 420px;
+    }
+}
+@media (max-width: 570px) {
+    .name {
+        font-size: 55px;
+        margin: 165px 0 0 10px;
+    }
+    .dev {
+        font-size: 55px;
+        color: gray;
+        margin-left: auto;
+        margin: 165px 10px 0 0;
+    }  
+    .Alva {
+        font-size: 55px;
+        margin: 165px 0 0px 0px;
+    }
+    .aboutMe {
+        width: 100%;
+        height: 420px;
+    }
+}
+@media (max-width: 535px) {
+    .name {
+        font-size: 50px;
+        margin: 165px 0 0 10px;
+    }
+    .dev {
+        font-size: 50px;
+        color: gray;
+        margin-left: auto;
+        margin: 165px 10px 0 0;
+    }  
+    .Alva {
+        font-size: 50px;
+        margin: 165px 0 0px 0px;
+    }
+    .aboutMe {
+        width: 100%;
+        height: 420px;
+    }
+}
+@media (max-width: 430px) {
+    .name {
+        font-size: 38px;
+        margin: 165px 0 0 5px;
+    }
+    .dev {
+        font-size: 38px;
+        color: gray;
+        margin-left: auto;
+        margin: 165px 5px 0 0;
+    }  
+    .Alva {
+        font-size: 38px;
+        margin: 165px 0 0px 0px;
+    }
+    .aboutMe {
+        width: 100%;
+        height: 400px;
+    }
+    .career {
+        font-size: 12px;
+        margin: 30px 0 0 8px;
+    }
+}
+@media (max-width: 414px) {
+    .name {
+        font-size: 38px;
+        margin: 165px 0 0 5px;
+    }
+    .dev {
+        font-size: 38px;
+        color: gray;
+        margin-left: auto;
+        margin: 165px 5px 0 0;
+    }  
+    .Alva {
+        font-size: 38px;
+        margin: 165px 0 0px 0px;
+    }
+    .aboutMe {
+        width: 100%;
+        height: 400px;
+    }
+    .career {
+        font-size: 12px;
+        margin: 30px 0 0 8px;
+    }
+}
+@media (max-width: 375px) {
+    .name {
+        font-size: 38px;
+        margin: 165px 0 0 5px;
+    }
+    .dev {
+        font-size: 38px;
+        color: gray;
+        margin-left: auto;
+        margin: 165px 5px 0 0;
+    }  
+    .Alva {
+        font-size: 38px;
+        margin: 165px 0 0px 0px;
+    }
+    .aboutMe {
+        width: 100%;
+        height: 400px;
+    }
+    .career {
+        font-size: 12px;
+        margin: 30px 0 0 8px;
     }
 }
