--- a/index.css
+++ b/index.css
@@ -80,12 +80,6 @@ html {
 }
 /* hasta aca va el primer cuadro negro */
 /* description .aboutMe2 */
-.responsive {
-    display: none;
-}
-.responsive2 {
-    display: none;
-}
 .about-me {
     display: flex;
     align-items: center;
@@ -112,14 +106,14 @@ html {
     width: 250px;
     height: auto;
     border-radius: 12px;
-    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.4);
 }
 /* cartas */
 .grid-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 15px;
-    padding: 90px 20px 90px 20px;
+    padding: 60px 20px 90px 20px;
 }
 
 @media (min-width: 600px) {
@@ -135,7 +129,7 @@ html {
 .card {
     background-color: #fff;
     border-radius: 16px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -195,7 +189,7 @@ html {
 .Projects{
     font-size: 32px;
     padding-top: 80px;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
     margin-left: 30px;
     font-weight: bold;
 }
@@ -234,6 +228,10 @@ footer {
 .social-footer {
     gap: 15px;
     width: 30px;
+    transition: transform 0.4s;
+}
+.social-footer:hover {
+    transform: scale(1.08);
 }
 .correo {
     color: white;
@@ -278,14 +276,14 @@ footer {
 }
 
 .hamburguesa {
+    position: absolute;
+    top: -9px;
     color: black;
     display: none;
-    font-size: 28px;
+    font-size: 40px;
     background: none;
     border: none;
     cursor: pointer;
-    height: 50px;
-    width: 41px ;
 }
 @media (max-width: 768px) {
     .logo {
@@ -415,6 +413,12 @@ footer {
     }
     .aboutMe {
         height: 435px;
+    }
+    .photoLina {
+        width: 320px;
+        height: auto;
+        border-radius: 12px;
+        box-shadow: 0 4px 16px rgba(0, 0, 0, 0.4);
     }
 }
 @media (max-width: 760px) {
