--- a/index.css
+++ b/index.css
@@ -103,7 +103,8 @@ html {
     line-height: 1.6;
 }
 .photoLina {
-    width: 250px;
+    width: 280px;
+    gap: 30px;
     height: auto;
     border-radius: 12px;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.4);
